[package]
name = "chess"
version = "0.8.1"
authors = ["Brynley Llewellyn-Roux", "Aryan Jassal"]
edition = "2021"
description = "A Rust implementation of the famous game Chess."
repository = "https://github.com/brynblack/chess"
license = "AGPL-3.0-or-later"

[dependencies]
bevy = { version = "0.8.0", features = ["wayland"] }
