[package]
name = "chess"
version = "0.8.6"
authors = ["Brynley Llewellyn-Roux", "Aryan Jassal"]
edition = "2021"
description = "A Rust implementation of the famous game Chess."
repository = "https://github.com/brynblack/chess"
license = "AGPL-3.0-or-later"

[dependencies]
bevy = { version = "0.8.0", features = ["wayland"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
